@@ -3653,7 +3653,8 @@ ipmi_oem_dell_power_supply_info (ipmi_oem_state_data_t *state_data)
                                  state_data->prog_data->args->sdr.quiet_cache,
                                  state_data->prog_data->args->sdr.sdr_cache_recreate,
                                  state_data->hostname,
-                                 state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+                                 state_data->prog_data->args->sdr.sdr_cache_directory,
+                                 state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     goto cleanup;
 
   if (calculate_entity_id_counts (state_data->pstate,
