@@ -78,7 +78,8 @@ _ipmi_oem_intelnm_node_manager_init (ipmi_oem_state_data_t *state_data,
                                  state_data->prog_data->args->sdr.quiet_cache,
                                  state_data->prog_data->args->sdr.sdr_cache_recreate,
                                  state_data->hostname,
-                                 state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+                                 state_data->prog_data->args->sdr.sdr_cache_directory,
+                                 state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     goto cleanup;
 
   if (ipmi_sdr_cache_record_count (state_data->sdr_cache_ctx, &record_count) < 0)
