@@ -77,7 +77,8 @@ ipmi_oem_sun_get_led (ipmi_oem_state_data_t *state_data)
                                  state_data->prog_data->args->sdr.quiet_cache,
                                  state_data->prog_data->args->sdr.sdr_cache_recreate,
                                  state_data->hostname,
-                                 state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+                                 state_data->prog_data->args->sdr.sdr_cache_directory,
+                                 state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     goto cleanup;
 
   if (state_data->prog_data->args->verbose_count)
@@ -432,7 +433,8 @@ ipmi_oem_sun_set_led (ipmi_oem_state_data_t *state_data)
                                  state_data->prog_data->args->sdr.quiet_cache,
                                  state_data->prog_data->args->sdr.sdr_cache_recreate,
                                  state_data->hostname,
-                                 state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+                                 state_data->prog_data->args->sdr.sdr_cache_directory,
+                                 state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     goto cleanup;
 
   /* Sun OEM
