@@ -382,7 +382,8 @@ _flush_cache (ipmi_sel_state_data_t *state_data)
                              state_data->pstate,
                              state_data->prog_data->args->sdr.quiet_cache,
                              state_data->hostname,
-                             state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+			     state_data->prog_data->args->sdr.sdr_cache_directory,
+			     state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     return (-1);
 
   return (0);
@@ -2111,7 +2112,8 @@ _display_sel_records (ipmi_sel_state_data_t *state_data)
                                      args->sdr.quiet_cache,
                                      args->sdr.sdr_cache_recreate,
                                      state_data->hostname,
-                                     args->sdr.sdr_cache_directory) < 0)
+                                     args->sdr.sdr_cache_directory,
+                                     args->sdr.sdr_cache_file) < 0)
         goto cleanup;
     }
 
