@@ -402,7 +402,8 @@ _flush_cache (ipmi_sensors_state_data_t *state_data)
                              state_data->pstate,
                              state_data->prog_data->args->sdr.quiet_cache,
                              state_data->hostname,
-                             state_data->prog_data->args->sdr.sdr_cache_directory) < 0)
+                             state_data->prog_data->args->sdr.sdr_cache_directory,
+                             state_data->prog_data->args->sdr.sdr_cache_file) < 0)
     return (-1);
 
   return (0);
@@ -1417,7 +1418,8 @@ run_cmd_args (ipmi_sensors_state_data_t *state_data)
                                  args->sdr.quiet_cache,
                                  args->sdr.sdr_cache_recreate,
                                  state_data->hostname,
-                                 args->sdr.sdr_cache_directory) < 0)
+                                 args->sdr.sdr_cache_directory,
+                                 args->sdr.sdr_cache_file) < 0)
     return (-1);
 
   if (_display_sensors (state_data) < 0)
